--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,160 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.play{
+  border: 2px solid black;
+  min-width: 100vw;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  background-color: #0f1B21;
+  position: relative;
+}
+.tryagain{
+  padding: 18px;
+  width: 190px;
+  border-radius: 19px;
+  border: none;
+  transition: 0.4s;
+  background: rgb(248, 228, 48);
+  font-weight: bold;
+  font-family: cursive;
+  font-size: 21px;
+
+}
+.tryagain:hover{
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  transform: translateY(-2px);
+  cursor: pointer;
+  background: rgb(228, 13, 13);
+  color: whitesmoke;
+
+}
+.title{
+  /* border: 2px solid red; */
+  padding: 17px;
+  margin-bottom: 17px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: wheat;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.orange{
+  color: orange;
+}
+.white{
+  color: whitesmoke;
+}
+.green{
+  color: green;
+}
+.board{
+  display: flex;
+  margin-top: 8px;
+  margin-bottom: 11px;
+
+}
+.box{
+  display: flex;
+  height: 150px;
+  width: 150px;
+  border: 3px solid #0f1B21;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  background-color: #1e282e;
+}
+.wins{
+  /* justify-content: flex-start; */
+  /* border: 2px solid black; */
+
+  position: absolute;
+  left: 0;
+  /* width: 300px;
+  height: 100px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  transition: 0.3s;
+
 }
 
-.App-link {
-  color: #61dafb;
+.wins img{
+  height: 30px;
+  width: 30px;
 }
+.congrats{
+  display: flex;
+  flex-direction: column;
+  color: bisque;
+  font-weight: bold;
+  background-color: darkslategray;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  margin-right: 18px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+}
+.home{
+  background-color: #0f1B21;
+  width: 70%;
+  margin: auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hometitle{
+  /* border: 2px solid black; */
+  color: wheat;
+  margin-bottom: 25px;
+  font-size: 45px;
+  font-family: cursive;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+.type{
+  color: #8696a0;
+}
+.btn{
+  padding: 18px;
+  width: 190px;
+  border-radius: 19px;
+  border: none;
+  transition: 0.4s;
+  background: rgb(204, 128, 93);
+  font-weight: bold;
+  font-family: cursive;
+  font-size: 21px;
+}
+.btn:hover{
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  transform: translateY(-2px);
+  cursor: pointer;
+  background: #8696a0;
+  color: whitesmoke;
+
+}
+.btn2{
+  margin-top: 7px;
+  margin-left: 11px;
+}
+@media screen and (max-width: 895px) {
+  .box{
+    height: 60px;
+    width: 60px;
   }
-  to {
-    transform: rotate(360deg);
+  .box img{
+    height: 15px;
+  }
+  .congrats{
+    display: flex;
+    flex-direction: column;
+    color: bisque;
+    font-size: 21px;
+    margin-right: 18px;
   }
 }
